--- a/src/PrismSample/Views/HomePage.xaml
+++ b/src/PrismSample/Views/HomePage.xaml
@@ -7,7 +7,10 @@
              x:Class="PrismSample.Views.HomePage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="{Binding LabelText}"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+            <Label Text="{Binding Initialized}"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
