--- a/src/PrismSample/Views/FlyoutPageA.xaml
+++ b/src/PrismSample/Views/FlyoutPageA.xaml
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="PrismSample.Views.HomePage">
+             Title="Flyout Page A"
+             x:Class="PrismSample.Views.FlyoutPageA">
   <StackLayout HorizontalOptions="Center"
                VerticalOptions="Center">
     <Label Text="{Binding LabelText}" />
