--- a/src/PrismSample/Views/FlyoutPageB.xaml
+++ b/src/PrismSample/Views/FlyoutPageB.xaml
@@ -8,6 +8,7 @@
              x:Class="PrismSample.Views.FlyoutPageB">
   <StackLayout HorizontalOptions="Center"
                VerticalOptions="Center">
+    <Label Text="Flyout Page B" />
     <Label Text="{Binding LabelText}" />
     <Label Text="{Binding Message, StringFormat='Message: {0}'}" />
     <Label Text="{Binding Initialized, StringFormat='Initialized: {0}'}" />
