--- a/src/PrismSample/Views/TabB.xaml
+++ b/src/PrismSample/Views/TabB.xaml
@@ -8,6 +8,7 @@
              x:Class="PrismSample.Views.TabB">
   <StackLayout HorizontalOptions="Center"
                VerticalOptions="Center">
+    <Label Text="Tab B" />
     <Label Text="{Binding LabelText}" />
     <Label Text="{Binding Message, StringFormat='Message: {0}'}" />
     <Label Text="{Binding Initialized, StringFormat='Initialized: {0}'}" />
